<resources>
    <string name="app_name">Hass.io widgets</string>
    <string name="hass_io_host_name_ip">hass.io host name/IP</string>
    <string name="hass_io_token">hass.io Long-Lived Access Token</string>
    <string name="save">Save</string>
    <string name="toast_saved">Parameters saved</string>
    <string name="name_of_widget">Name of widget</string>
    <string name="widget_url">Endpoint, e.g. /api/services/scene/turn_on</string>
    <string name="widget_body">body (json) or none.</string>
</resources>
